Try to avoid header overlap

--- a/Battery-Commander.Web/wwwroot/css/site.css
+++ b/Battery-Commander.Web/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 70px;
     padding-bottom: 20px;
+}
+@media screen and (max-width: 768px) {
+    body { padding-top: 40px; }
 }
 
 /* Wrapping element */
